@@ -1,0 +1,28 @@
+import test_support
+import unittest
+
+class WrappedStrCmpTest(unittest.TestCase):
+    def testWrappedWorksAsKey(self):
+        '''Test for http://jython.org/bugs/1816134
+
+        PyString's equal used to check for str explicitly, so Wrapper's __cmp__ wasn't used
+        and a KeyError would be raised by the lookup on ABC.
+        '''
+        class Wrapper(object):
+            def __init__(self, content):
+                self.content = content
+            def __hash__(self):
+                return hash(self.content)
+            def __cmp__(self, other):
+                if isinstance(other, Wrapper):
+                    return cmp(self.content, other.content)
+                return cmp(self.content, other)
+        d = {'ABC' : 1}
+        ABC = Wrapper('ABC')
+        self.assertEquals(1, d[ABC])
+
+def test_main():
+    test_support.run_unittest(WrappedStrCmpTest)
+
+if __name__ == '__main__':
+    test_main()
