@@ -7,6 +7,15 @@ Jython 2.2.2 rc1
     - [ 1831710 ] PyFileCloser throws NullPointerException on shutdown
     - [ 1817908 ] Broken link for corner icon in html documentation
     - [ 1850722 ] socket.py - ClientCookie and ClientForm (and urllib2)
+    - [ 1841445 ] PythonInterpreter.get(String name, Class javaclass) throws 
+    an NPE if name isn't defined
+    - [ 1839871 ] dict calls __setitem__ on subclasses in initialization
+    - [ 1816134 ] str uses its own __eq__ instead of deferring to subclasses
+    - [ 1796425 ] os.renames missing
+    - [ 1796415 ] os.removedirs missing
+    - [ 1814678 ] os.__all__ missing many functions
+    - [ 1812122 ] NullPointerException when rethrowing an exception
+    - [ 1830916 ] PyException doesn't store causal Java exception
 
 Jython 2.2.1
   Identical to 2.2.1 rc2
